csrsto & Hehch pendiente Modificación de agregar Productos por Código Read

--- a/web/reportes/reporteFacturaServicio.jrxml
+++ b/web/reportes/reporteFacturaServicio.jrxml
@@ -22,8 +22,8 @@
 FROM
 	detalleServicio AS ds
 INNER JOIN Servicio AS s ON s.idServicio=ds.idServicio
-INNER JOIN Persona  AS p ON p.idPersona=s.idPersona
-INNER JOIN Empleado  AS e ON e.idEmpleado=s.idEmpleado
+INNER JOIN Persona AS p ON p.idPersona=s.idPersona
+INNER JOIN Empleado AS e ON e.idEmpleado=s.idEmpleado
 WHERE  ds.idServicio=$P{idServicio}]]>
 	</queryString>
 	<field name="identificacionPersona" class="java.lang.Integer">
@@ -50,7 +50,10 @@ WHERE  ds.idServicio=$P{idServicio}]]>
 	<field name="valorVentaProducto" class="java.lang.Float">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="IVA" class="java.lang.String">
+	<field name="IVA" class="java.lang.Double">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="totalIva" class="java.lang.Float">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="unidadesVendidas" class="java.lang.Integer">
@@ -61,6 +64,12 @@ WHERE  ds.idServicio=$P{idServicio}]]>
 	</field>
 	<variable name="totalServicio" class="java.math.BigDecimal" calculation="Sum">
 		<variableExpression><![CDATA[$F{totalDetalleServicio}]]></variableExpression>
+	</variable>
+	<variable name="subTotal" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$F{totalDetalleServicio}-$F{IVA}*$F{totalDetalleServicio}*0.19]]></variableExpression>
+	</variable>
+	<variable name="totalIva" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$F{totalDetalleServicio}*0.19*$F{IVA}]]></variableExpression>
 	</variable>
 	<background>
 		<band splitType="Stretch"/>
@@ -75,8 +84,8 @@ WHERE  ds.idServicio=$P{idServicio}]]>
 				<text><![CDATA[SERVICIOS]]></text>
 			</staticText>
 			<image>
-				<reportElement x="64" y="3" width="132" height="113" uuid="842255c5-c9eb-4bd9-b6b9-278c409106b2"/>
-				<imageExpression><![CDATA["/Users/csrsto/Downloads/GreenApps/reportesdeutilidades/web/imgs/GreenApps.jpg"]]></imageExpression>
+				<reportElement x="55" y="1" width="151" height="116" uuid="67dbc9f4-4011-4441-beb9-4a59bd353d24"/>
+				<imageExpression><![CDATA["/Users/csrsto/Downloads/GreenApps/GreenApps/web/imgs/GreenApps.jpg"]]></imageExpression>
 			</image>
 		</band>
 	</title>
@@ -156,53 +165,60 @@ WHERE  ds.idServicio=$P{idServicio}]]>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="5" y="82" width="50" height="17" uuid="efb3c686-504c-4787-a16f-e087b5d5503a"/>
+				<reportElement x="3" y="82" width="50" height="17" uuid="efb3c686-504c-4787-a16f-e087b5d5503a"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Unidades]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="69" y="82" width="56" height="17" uuid="307d4d41-3208-47c3-a946-17cc7a4fa83e"/>
+				<reportElement x="56" y="82" width="56" height="17" uuid="307d4d41-3208-47c3-a946-17cc7a4fa83e"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Producto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="155" y="82" width="37" height="17" uuid="f7bacbc3-e529-4618-adb6-2246bc11c477"/>
+				<reportElement x="116" y="82" width="37" height="17" uuid="f7bacbc3-e529-4618-adb6-2246bc11c477"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Valor]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="212" y="82" width="29" height="17" uuid="2a5f30a7-4e42-4851-aebf-564b7046e77c"/>
+				<reportElement x="216" y="82" width="29" height="17" uuid="2a5f30a7-4e42-4851-aebf-564b7046e77c"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Total]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="169" y="82" width="37" height="17" uuid="1182f94a-8ce6-4d8d-a347-6a9b77b8d619"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Iva]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="30" splitType="Stretch">
 			<textField>
-				<reportElement x="15" y="0" width="28" height="19" uuid="05be36fe-bfa5-407d-9714-ee5c3327fb72"/>
+				<reportElement x="13" y="0" width="28" height="19" uuid="05be36fe-bfa5-407d-9714-ee5c3327fb72"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{unidadesVendidas}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="55" y="-2" width="82" height="32" uuid="ded259b7-86fb-4977-813f-7376ba58faa1"/>
+				<reportElement x="40" y="-2" width="82" height="32" uuid="ded259b7-86fb-4977-813f-7376ba58faa1"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombreProducto}]]></textFieldExpression>
 			</textField>
 			<textField pattern="$,##0">
-				<reportElement x="138" y="0" width="71" height="20" uuid="f983e176-7c4b-4593-ad3f-d42014224a73"/>
+				<reportElement x="98" y="0" width="71" height="20" uuid="f983e176-7c4b-4593-ad3f-d42014224a73"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
@@ -215,36 +231,64 @@ WHERE  ds.idServicio=$P{idServicio}]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{totalDetalleServicio}]]></textFieldExpression>
 			</textField>
+			<textField pattern="$,##0">
+				<reportElement x="170" y="0" width="32" height="20" uuid="66014f1d-7a0f-4e30-8d2e-ca92f4bf3f42"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{totalIva}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<summary>
-		<band height="83" splitType="Stretch">
+		<band height="110" splitType="Stretch">
 			<rectangle radius="10">
-				<reportElement x="101" y="4" width="121" height="14" uuid="0d9121fc-61c4-49ed-a2a7-d6293d75523d"/>
+				<reportElement x="101" y="33" width="121" height="14" uuid="0d9121fc-61c4-49ed-a2a7-d6293d75523d"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="104" y="4" width="63" height="14" uuid="dbb686c5-5267-45d5-bb65-3fe0b5c9f9f7"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<reportElement x="104" y="33" width="63" height="14" uuid="dbb686c5-5267-45d5-bb65-3fe0b5c9f9f7"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Total Venta:]]></text>
 			</staticText>
-			<line>
-				<reportElement x="4" y="21" width="259" height="1" uuid="62f6c556-5c54-4360-9501-b1bb81d9a831"/>
-			</line>
 			<textField pattern="$,##0">
-				<reportElement x="161" y="4" width="60" height="14" uuid="6f51563b-dcd7-4a73-b11f-548844aa1985"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<reportElement x="162" y="33" width="54" height="14" uuid="6f51563b-dcd7-4a73-b11f-548844aa1985"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{totalServicio}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="10" y="23" width="244" height="59" uuid="b1ec4fb3-097c-4d37-859e-6e83cc7311c0"/>
+				<reportElement x="10" y="51" width="244" height="59" uuid="b1ec4fb3-097c-4d37-859e-6e83cc7311c0"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
 				<text><![CDATA[Es obligatorio presentar esta Factura Original para efectos de reclamos y garantías de Accesorios y Repuestos. Pasados 30 días no se aceptan devoluciones ni productos en mal estado o incompletos. La garantía en llantas es de tres meses por defectos de fabricación, no se aceptan llantas parchadas o con daños producidos por terceros. La garantía en baterías es de dos meses por descargas o defectos de fabricación. Partes electricas no tienen garantía.]]></text>
+			</staticText>
+			<textField pattern="$,##0">
+				<reportElement x="162" y="2" width="54" height="14" uuid="10891a59-c469-45d4-8dda-9e9103afffad"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{subTotal}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="104" y="2" width="63" height="14" uuid="5e6f430f-398b-4b3c-b0f0-48cb9f54c064"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[SubTotal:]]></text>
+			</staticText>
+			<textField pattern="$,##0">
+				<reportElement x="162" y="17" width="54" height="14" uuid="2ee14989-cbdb-49d7-958a-ed9b64ec5cfe"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{totalIva}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="104" y="17" width="63" height="14" uuid="c119ac7e-c79f-4479-923f-78bfdd30d6f1"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Iva:]]></text>
 			</staticText>
 		</band>
 	</summary>
