--- a/web/views/Mecanico/Mecanico.xhtml
+++ b/web/views/Mecanico/Mecanico.xhtml
@@ -19,7 +19,7 @@
                 </h:form>
                 <h1></h1>
                 <h:form id="formMostrarMecanicos">
-                    <p:dataTable id="tableMecanicos" value="#{mecanicoBean.listaMecanicos}" var="mec" emptyMessage="Sin Registros Guardados" style="align-content:center; margin-left:auto; margin-right:auto; font-style:initial; font-family:sans-serif; font-size:15px" rows="5" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" rowsPerPageTemplate="5,10,15">
+                    <p:dataTable id="tableMecanicos" value="#{mecanicoBean.listaMecanicos}" scrollable="true" scrollHeight="150"  var="mec" emptyMessage="Sin Registros Guardados" style="align-content:center; margin-left:auto; margin-right:auto; font-style:initial; font-family:sans-serif; font-size:15px" rows="5" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" rowsPerPageTemplate="5,10,15">
                         <p:column headerText="Identificación" filterBy="#{mec.identificacionMecanico}" filterStyle="width:150px; text-align:center" filterMatchMode="contains" style="text-align:center; width:180px">
                             <h:outputText value="#{mec.identificacionMecanico}"/>
                         </p:column>
