--- a/web/views/Persona/Persona.xhtml
+++ b/web/views/Persona/Persona.xhtml
@@ -25,7 +25,7 @@
                 <f:event type="preRenderView" listener="#{ciudadBean.reporteCiudades()}"/>
                 
                 <h:form id="formMostrarPersonas">
-                    <p:dataTable id="tablePersonas" value="#{personaBean.listaPersonas}" var="per" emptyMessage="Sin Registros Guardados" style="align-content:center; margin-left:auto; margin-right:auto; font-style:initial; font-family:sans-serif; font-size:15px" rows="5" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" rowsPerPageTemplate="5,10,15">
+                    <p:dataTable id="tablePersonas" value="#{personaBean.listaPersonas}" scrollable="true" scrollHeight="150"  var="per" emptyMessage="Sin Registros Guardados" style="align-content:center; margin-left:auto; margin-right:auto; font-style:initial; font-family:sans-serif; font-size:15px" rows="5" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" rowsPerPageTemplate="5,10,15">
                         <p:column headerText="Clase" style="text-align:center">
                             <h:outputText value="#{personaBean.getmostrarTipoPersona(per.idTipoPersona)}"/>
                         </p:column>
