--- a/web/views/Servicio/Fac-Servicios.xhtml
+++ b/web/views/Servicio/Fac-Servicios.xhtml
@@ -16,7 +16,7 @@
                 <h1></h1>
 
                 <h:form id="formMostrarServicios">
-                    <p:dataTable id="tableServicios" value="#{servicioBean.listaServicios}" var="ser" emptyMessage="Sin Registros Guardados" style="align-content:center; margin-left:auto; margin-right:auto; font-style:initial; font-family:sans-serif; font-size:15px" rows="1" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" rowsPerPageTemplate="1">
+                    <p:dataTable id="tableServicios" value="#{servicioBean.listaServicios}" scrollable="true" scrollHeight="150"  var="ser" emptyMessage="Sin Registros Guardados" style="align-content:center; margin-left:auto; margin-right:auto; font-style:initial; font-family:sans-serif; font-size:15px" rows="1" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" rowsPerPageTemplate="1">
                         <p:column headerText="PLaca" filterBy="#{ser.placa}" filterStyle="width:150px; text-align:center" filterMatchMode="contains" style="text-align:center; width:180px">
                             <h:outputText value="#{ser.placa}"/>
                         </p:column>
