--- a/web/views/DevolucionCliente/DevolucionCliente.xhtml
+++ b/web/views/DevolucionCliente/DevolucionCliente.xhtml
@@ -12,42 +12,42 @@
 
             <ui:define name="content">
                 <h1></h1>
-                <h3>DEVOLUCIONES</h3>
+                <h3>DEVOLUCIONES CLIENTES</h3>
                 <h3></h3>
                 <h:form>
                     <h:panelGrid width="1010px" style="margin: 0 auto;">
-                        <p:commandButton value="Nueva Devolución" style="font-family: sans-serif; font-size: 22px; width: 262px; height: 55px; color: coral" actionListener="#{devolucionBean.numeracionDevolucion()}" update=":formFacturaDevolucion" action="#{devolucionBean.enableBoton()}"/>
+                        <p:commandButton value="Nueva Devolución" style="font-family: sans-serif; font-size: 22px; width: 262px; height: 55px; color: coral" actionListener="#{devolucionClienteBean.numeracionDevolucionCliente()}" update=":formFacturaDevolucionCliente" action="#{devolucionClienteBean.enableBoton()}"/>
                     </h:panelGrid>
                 </h:form>
                 <h3></h3>
-                <h:form id="formFacturaDevolucion">
-                    <p:growl id="mensajesDevolucion" autoUpdate="true" showDetail="true" life="1500"/>
+                <h:form id="formFacturaDevolucionCliente">
+                    <p:growl id="mensajesDevolucionCliente" autoUpdate="true" showDetail="true" life="1500"/>
                     <p:panel style="width: 1111px; margin: 0 auto; text-align: center">
-                        <p:layout id="layoutFacturaDevolucion" style="width: 100%; height: 85px">
-                            <p:layoutUnit id="layoutDevolucion" position="center" style="padding: 5px; text-align: justify; font-size: 15px; size: 300px">
+                        <p:layout id="layoutFacturaDevolucionCliente" style="width: 100%; height: 85px">
+                            <p:layoutUnit id="layoutDevolucionCliente" position="center" style="padding: 5px; text-align: justify; font-size: 15px; size: 300px">
                                 <h:panelGrid id="gridBuscarEmpPro" columns="8">
                                     <p:outputLabel value="Cliente: " style="font-size: 16px; font-weight: bold"/>
-                                    <p:inputText id="inpTexAcreedor" value="#{devolucionBean.identificacionPersona}" size="23" placeholder="Ingrese C.C o Nit"  converter="#{Integer}" converterMessage="Valor Erroneo" disabled="#{!devolucionBean.enabled}" style="text-align: center">
-                                        <p:ajax event="keyup" delay="500" listener="#{devolucionBean.agregarDatosPersonaPorIdentificacion()}" update=":formFacturaDevolucion:gridDatosAcreedor :formFacturaDevolucion:inpTexAcreedor"/>
+                                    <p:inputText id="inpTexAcreedor" value="#{devolucionClienteBean.identificacionPersona}" size="23" placeholder="Ingrese C.C o Nit"  converter="#{Integer}" converterMessage="Valor Erroneo" disabled="#{!devolucionClienteBean.enabled}" style="text-align: center">
+                                        <p:ajax event="keyup" delay="500" listener="#{devolucionClienteBean.agregarDatosPersonaPorIdentificacion()}" update=":formFacturaDevolucionCliente:gridDatosAcreedor :formFacturaDevolucionCliente:inpTexAcreedor"/>
                                     </p:inputText> 
-                                    <p:commandButton value="+" oncomplete="PF('dialogDatosAcreedores').show();" update=":formFacturaDevolucion:dialogAcreedores" disabled="#{!devolucionBean.enabled}"/>
+                                    <p:commandButton value="+" oncomplete="PF('dialogDatosAcreedores').show();" update=":formFacturaDevolucionCliente:dialogAcreedores" disabled="#{!devolucionClienteBean.enabled}"/>
                                     <p:outputLabel value="Pago: " style="font-size: 16px; font-weight: bold"/>
-                                    <p:inputText id="inpTexFormaPago" size="20" placeholder="Credito/Contado"  converter="#{Integer}" converterMessage="Valor Erroneo" disabled="#{!devolucionBean.enabled}" style="text-align: center">
-                                        <p:ajax event="keyup" delay="500" update=":formFacturaDevolucion:gridDatosAcreedor :formFacturaDevolucion:inpTexFormaPago"/>
+                                    <p:inputText id="inpTexFormaPago" size="20" placeholder="Credito/Contado"  converter="#{Integer}" converterMessage="Valor Erroneo" disabled="#{!devolucionClienteBean.enabled}" style="text-align: center">
+                                        <p:ajax event="keyup" delay="500" update=":formFacturaDevolucionCliente:gridDatosAcreedor :formFacturaDevolucionCliente:inpTexFormaPago"/>
                                     </p:inputText> 
-                                    <p:commandButton value="+" oncomplete="PF('dialogDatosAcreedores').show();" update=":formFacturaDevolucion:dialogAcreedores" disabled="#{!devolucionBean.enabled}"/>
+                                    <p:commandButton value="+" oncomplete="PF('dialogDatosAcreedores').show();" update=":formFacturaDevolucionCliente:dialogAcreedores" disabled="#{!devolucionClienteBean.enabled}"/>
                                     <p:outputLabel value="Fecha: " style="font-size: 16px; font-weight: bold"/>
-                                    <p:outputLabel value="#{devolucionBean.fechaSistema}"/>        
+                                    <p:outputLabel value="#{devolucionClienteBean.fechaSistema}"/>        
                                 </h:panelGrid>
                                 <h:panelGrid id="gridDatosAcreedor" columns="10">
                                     <p:outputLabel value="Nombres: " style="font-size: 16px; font-weight: bold"/>
-                                    <p:outputLabel id="nombresAcreedor" value="#{devolucionBean.persona.nombresPersona}"/>
+                                    <p:outputLabel id="nombresAcreedor" value="#{devolucionClienteBean.persona.nombresPersona}"/>
                                     <p:outputLabel value="Apellidos: " style="font-size: 16px; font-weight: bold"/>
-                                    <p:outputLabel id="apellidosAcreedor" value="#{devolucionBean.persona.apellidosPersona}"/>
+                                    <p:outputLabel id="apellidosAcreedor" value="#{devolucionClienteBean.persona.apellidosPersona}"/>
                                     <p:outputLabel value="Dirección: " style="font-size: 16px; font-weight: bold"/>
-                                    <p:outputLabel id="direccionAcreedor" value="#{devolucionBean.persona.direccionPersona}"/>
+                                    <p:outputLabel id="direccionAcreedor" value="#{devolucionClienteBean.persona.direccionPersona}"/>
                                     <p:outputLabel value="Teléfono: " style="font-size: 16px; font-weight: bold"/>
-                                    <p:outputLabel id="telefonoAcreedor" value="#{devolucionBean.persona.telefonoPersona}"/>
+                                    <p:outputLabel id="telefonoAcreedor" value="#{devolucionClienteBean.persona.telefonoPersona}"/>
                                 </h:panelGrid>
                             </p:layoutUnit>
                             <p:layoutUnit id="layoutNumeroFactura" position="east" style=" padding: 15px; text-align: center; font-size: 33px" size="150">
@@ -58,14 +58,14 @@
                         </p:layout>
                         <h:panelGrid id="gridBuscarProducto" columns="3">
                             <p:outputLabel value="Código de Producto: " style="font-size: 16px; font-weight: bold"/>
-                            <p:inputText id="inpTexProducto" value="#{devolucionBean.codigoProducto}" size="27" placeholder="Digite Código Producto" disabled="#{!devolucionBean.enabled}" style="text-align: center; text-transform: uppercase">
-                                <p:ajax event="keyup" delay="500" listener="#{devolucionBean.mostrarDatosCantidadProductoPorCodigo()}" update=":formFacturaDevolucion:gridBuscarProducto"/>
+                            <p:inputText id="inpTexProducto" value="#{devolucionClienteBean.codigoProducto}" size="27" placeholder="Digite Código Producto" disabled="#{!devolucionClienteBean.enabled}" style="text-align: center; text-transform: uppercase">
+                                <p:ajax event="keyup" delay="500" listener="#{devolucionClienteBean.mostrarDatosCantidadProductoPorCodigo()}" update=":formFacturaDevolucionCliente:gridBuscarProducto"/>
                             </p:inputText>
-                            <p:commandButton value="+" oncomplete="PF('dialogDatosProductos').show();" update=":formFacturaDevolucion:dialogProductos" disabled="#{!devolucionBean.enabled}"/>
+                            <p:commandButton value="+" oncomplete="PF('dialogDatosProductos').show();" update=":formFacturaDevolucionCliente:dialogProductos" disabled="#{!devolucionClienteBean.enabled}"/>
                         </h:panelGrid>
-                        <p:dataTable id="tableProductoFactura" editable="true" value="#{devolucionBean.listaDetalleDevolucion}" var="pro" rowIndexVar="rowIndex">
-                            <p:ajax event="rowEdit" listener="#{devolucionBean.onRowEdit}" update=":formFacturaDevolucion:tableProductoFactura :formFacturaDevolucion:gridTotalFactura"/>
-                            <p:ajax event="rowEditCancel" listener="#{devolucionBean.onRowCancel}" update=":formFacturaDevolucion:tableProductoFactura :formFacturaDevolucion:gridTotalFactura"/>
+                        <p:dataTable id="tableProductoFactura" editable="true" value="#{devolucionClienteBean.listaDetalleDevolucionCliente}" var="pro" rowIndexVar="rowIndex">
+                            <p:ajax event="rowEdit" listener="#{devolucionClienteBean.onRowEdit}" update=":formFacturaDevolucionCliente:tableProductoFactura :formFacturaDevolucionCliente:gridTotalFactura"/>
+                            <p:ajax event="rowEditCancel" listener="#{devolucionClienteBean.onRowCancel}" update=":formFacturaDevolucionCliente:tableProductoFactura :formFacturaDevolucionCliente:gridTotalFactura"/>
                             <p:column headerText="Código">
                                 <h:outputText value="#{pro.codigoProducto}"/>
                             </p:column>
@@ -97,24 +97,24 @@
                                 </p:cellEditor>
                             </p:column>
                             <p:column headerText="Total">
-                                <p:outputLabel value="#{pro.totalDetalleDevolucion}">
+                                <p:outputLabel value="#{pro.totalDetalleDevolucionCliente}">
                                     <f:convertNumber type="currency" currencySymbol="$ " minFractionDigits="0"/>
                                 </p:outputLabel>
                             </p:column>
                             <p:column headerText="Eliminar" style="width:88px">
-                                <p:commandLink value=" X" style="font-size: 22px ; text-decoration: none ; color: red" actionListener="#{devolucionBean.eliminarProducto(pro.codigoProducto, rowIndex)}" update=":formFacturaDevolucion:tableProductoFactura :formFacturaDevolucion:gridTotalFactura"/>
+                                <p:commandLink value=" X" style="font-size: 22px ; text-decoration: none ; color: red" actionListener="#{devolucionClienteBean.eliminarProducto(pro.codigoProducto, rowIndex)}" update=":formFacturaDevolucionCliente:tableProductoFactura :formFacturaDevolucionCliente:gridTotalFactura"/>
                                 <p:rowEditor/>
                             </p:column>
                         </p:dataTable>
                         <h:panelGrid id="gridTotalFactura" columns="2" style="font-size: 15px; margin: 0 auto">
                             <h3>Total Devolución</h3> 
-                            <p:outputLabel value="#{devolucionBean.totalDevolucionFacturaDevolucion}" style="font-size: 27px; margin: 0 auto">
+                            <p:outputLabel value="#{devolucionClienteBean.totalDevolucionClienteFacturaDevolucionCliente}" style="font-size: 27px; margin: 0 auto">
                                 <f:convertNumber type="currency" currencySymbol="$ " minFractionDigits="0"/>
                             </p:outputLabel>
                         </h:panelGrid>
                         <h6></h6>
-                        <p:commandButton value="Aceptar" style="width: 100px; height: 38px" actionListener="#{devolucionBean.ingresarDevolucionFULL()}" update=":formFacturaDevolucion" disabled="#{!devolucionBean.enabled}" action="#{devolucionBean.disableBoton()}"/>
-                        <p:commandButton value="Cancelar" style="width: 100px; height: 38px" action="#{devolucionBean.limpiarFacturaDevolucion()}" update=":formFacturaDevolucion" disabled="#{!devolucionBean.enabled}"/>
+                        <p:commandButton value="Aceptar" style="width: 100px; height: 38px" actionListener="#{devolucionClienteBean.ingresarDevolucionClienteFULL()}" update=":formFacturaDevolucionCliente" disabled="#{!devolucionClienteBean.enabled}" action="#{devolucionClienteBean.disableBoton()}"/>
+                        <p:commandButton value="Cancelar" style="width: 100px; height: 38px" action="#{devolucionClienteBean.limpiarFacturaDevolucionCliente()}" update=":formFacturaDevolucionCliente" disabled="#{!devolucionClienteBean.enabled}"/>
                     </p:panel>
                     <p:dialog id="dialogAcreedores" widgetVar="dialogDatosAcreedores" modal="true" resizable="true" showEffect="explode" hideEffect="explode" style="text-align:center">
                         <p:dataTable id="tablePersonas" value="#{personaBean.listaPersonas}" var="per" emptyMessage="Sin Registros Guardados" style="align-content:center; margin-left:auto; margin-right:auto; font-style:initial; font-family:sans-serif; font-size:15px" rows="5" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" rowsPerPageTemplate="5,10,15">
@@ -146,7 +146,7 @@
                                 <h:outputText value="#{per.correoPersona}"/>
                             </p:column>
                             <p:column headerText="Seleccione" style="text-align:center; font-size:13px">
-                                <p:commandButton value="Seleccionar" actionListener="#{devolucionBean.agregarDatosPersona(per.idPersona)}" oncomplete="PF('dialogDatosAcreedores').hide();" update=":formFacturaDevolucion:gridDatosAcreedor"/>
+                                <p:commandButton value="Seleccionar" actionListener="#{devolucionClienteBean.agregarDatosPersona(per.idPersona)}" oncomplete="PF('dialogDatosAcreedores').hide();" update=":formFacturaDevolucionCliente:gridDatosAcreedor"/>
                             </p:column>
                         </p:dataTable>
                         <h6></h6><p:commandButton value="Cancelar" oncomplete="PF('dialogDatosAcreedores').hide();"/>
@@ -183,18 +183,18 @@
                                 <h:outputText value="#{productoBean.getmostrarUbicacionProducto(pro.idUbicacionProducto)}"/>
                             </p:column>        
                             <p:column headerText="Seleccione" style="text-align:center; font-size:11px">
-                                <p:commandButton value="Seleccionar" actionListener="#{devolucionBean.solicitarCantidadProducto(pro.codigoProducto)}" oncomplete="PF('dialogDatosCantidadProducto').show();" update=":formFacturaDevolucion:dialogCantidadProducto"/>
+                                <p:commandButton value="Seleccionar" actionListener="#{devolucionClienteBean.solicitarCantidadProducto(pro.codigoProducto)}" oncomplete="PF('dialogDatosCantidadProducto').show();" update=":formFacturaDevolucionCliente:dialogCantidadProducto"/>
                             </p:column>
                         </p:dataTable>
                         <h6></h6><p:commandButton value="Cancelar" oncomplete="PF('dialogDatosProductos').hide();"/>
                     </p:dialog>
                     <p:dialog id="dialogCantidadProducto" widgetVar="dialogDatosCantidadProducto" header="Cantidad" modal="true" resizable="true" showEffect="explode" hideEffect="explode" style="text-align:center">   
-                        <p:inputText id="inpTexCantidadProducto" value="#{devolucionBean.unidadesDevueltas}" placeholder="Digite una Cantidad" style="text-align:center"/>
-                        <p:commandButton value="Aceptar" actionListener="#{devolucionBean.agregarDatosProductoPorCodigoProducto()}" oncomplete="PF('dialogDatosCantidadProducto').hide(); PF('dialogDatosProductos').hide();" update=":formFacturaDevolucion:tableProductoFactura :formFacturaDevolucion:dialogCantidadProducto :formFacturaDevolucion:gridTotalFactura"/>
+                        <p:inputText id="inpTexCantidadProducto" value="#{devolucionClienteBean.unidadesDevueltas}" placeholder="Digite una Cantidad" style="text-align:center"/>
+                        <p:commandButton value="Aceptar" actionListener="#{devolucionClienteBean.agregarDatosProductoPorCodigoProducto()}" oncomplete="PF('dialogDatosCantidadProducto').hide(); PF('dialogDatosProductos').hide();" update=":formFacturaDevolucionCliente:tableProductoFactura :formFacturaDevolucionCliente:dialogCantidadProducto :formFacturaDevolucionCliente:gridTotalFactura"/>
                     </p:dialog>
                     <p:dialog id="dialogCantidadProductoPorCodigo" widgetVar="dialogDatosCantidadProductoPorCodigo" header="Cantidad" modal="true" resizable="true" showEffect="explode" hideEffect="explode" style="text-align:center">   
-                        <p:inputText id="inpTexCantidadProductoPorCodigo" value="#{devolucionBean.unidadesDevueltasPorCodigo}" placeholder="Digite una Cantidad" style="text-align:center"/>
-                        <p:commandButton value="Aceptar" actionListener="#{devolucionBean.agregarDatosProductoPorCodigoProductoRead()}" oncomplete="PF('dialogDatosCantidadProductoPorCodigo').hide();" update=":formFacturaDevolucion:tableProductoFactura :formFacturaDevolucion:dialogCantidadProductoPorCodigo :formFacturaDevolucion:gridTotalFactura"/>
+                        <p:inputText id="inpTexCantidadProductoPorCodigo" value="#{devolucionClienteBean.unidadesDevueltasPorCodigo}" placeholder="Digite una Cantidad" style="text-align:center"/>
+                        <p:commandButton value="Aceptar" actionListener="#{devolucionClienteBean.agregarDatosProductoPorCodigoProductoRead()}" oncomplete="PF('dialogDatosCantidadProductoPorCodigo').hide();" update=":formFacturaDevolucionCliente:tableProductoFactura :formFacturaDevolucionCliente:dialogCantidadProductoPorCodigo :formFacturaDevolucionCliente:gridTotalFactura"/>
                     </p:dialog>
                 </h:form>
             </ui:define>
