--- a/web/views/Venta/Venta.xhtml
+++ b/web/views/Venta/Venta.xhtml
@@ -19,6 +19,10 @@
                         <p:commandButton value="Nueva Venta" style="font-family: sans-serif; font-size: 22px; width: 202px; height: 55px; color: coral" actionListener="#{ventaBean.numeracionVenta()}" update=":formFacturaVenta" action="#{ventaBean.enableBoton()}"/>
                     </h:panelGrid>
                 </h:form>
+                <f:event type="preRenderView" listener="#{tipoPersonaBean.reportePersonas()}"/>
+                <f:event type="preRenderView" listener="#{tipoDocumentoBean.reporteTipoDocumentos()}"/>
+                <f:event type="preRenderView" listener="#{departamentoBean.reporteDepartamentos()}"/>
+                <f:event type="preRenderView" listener="#{ciudadBean.reporteCiudades()}"/>
                 <h3></h3>
                 <h:form id="formFacturaVenta">
                     <p:growl id="mensajesVenta" autoUpdate="true" showDetail="true" life="1500"/>
@@ -31,7 +35,7 @@
                                         <p:ajax event="keyup" delay="500" listener="#{ventaBean.agregarDatosPersonaPorIdentificacion()}" update=":formFacturaVenta:gridDatosCliente :formFacturaVenta:inpTexCliente"/>
                                     </p:inputText> 
                                     <p:commandButton value="+" oncomplete="PF('dialogDatosClientes').show();" update=":formFacturaVenta:dialogClientes" disabled="#{!ventaBean.enabled}"/>
-                                    <p:outputLabel value="Pago: " style="font-size: 16px; font-weight: bold"/>
+                                    <p:commandButton value="Persona" actionListener="#{personaBean.nuevaPersona()}" oncomplete="PF('dialogNuevoPersona').show();" update=":formNuevoPersona" style="text-align:center; font-size:15px"/><p:outputLabel value="Pago: " style="font-size: 16px; font-weight: bold"/>
                                     <p:inputText id="inpTexFormaPago" size="15" placeholder="Credito/Contado"  converter="#{Integer}" converterMessage="Valor Erroneo" disabled="#{!ventaBean.enabled}" style="text-align: center">
                                         <p:ajax event="keyup" delay="500" update=":formFacturaVenta:gridDatosCliente :formFacturaVenta:inpTexFormaPago"/>
                                     </p:inputText>
@@ -221,6 +225,46 @@
                     <p:dialog id="dialogCantidadProductoPorCodigoRead" widgetVar="dialogDatosCantidadProductoPorCodigoRead" header="Cantidad" modal="true" resizable="true" showEffect="explode" hideEffect="explode" style="text-align:center">   
                         <p:inputText id="inpTexCantidadProductoPorCodigo" value="#{ventaBean.unidadesVendidasPorCodigo}" placeholder="Digite una Cantidad" style="text-align:center"/>
                         <p:commandButton value="Aceptar" actionListener="#{ventaBean.agregarDatosProductoPorCodigoProductoRead()}" oncomplete="PF('dialogDatosCantidadProductoPorCodigoRead').hide();" update=":formFacturaVenta:tableProductoFactura :formFacturaVenta:dialogCantidadProductoPorCodigoRead :formFacturaVenta:gridTotalFactura"/>
+                    </p:dialog>
+                </h:form>
+                <h:form id="formNuevoPersona">
+                    <p:dialog id="dlgNuevoPersona" header="Información Persona" widgetVar="dialogNuevoPersona" resizable="false" showEffect="explode" hideEffect="explode" modal="true" style="text-align: center">
+                        <p:panelGrid columns="2" style="margin: 0 auto;">
+                            <p:outputLabel value="Clase"/>
+                            <p:selectOneMenu value="#{personaBean.persona.idTipoPersona}">
+                                    <f:selectItem noSelectionOption="true" itemLabel="Seleccione" itemValue="#{null}"/>
+                                    <f:selectItems value="#{tipoPersonaBean.listaTipoPersonas}" var="tipPer" itemLabel="#{tipPer.descripcionPersona}" itemValue="#{tipPer.idTipoPersona}"/>
+                                </p:selectOneMenu>
+                            <p:outputLabel value="Documento"/>
+                            <p:selectOneMenu value="#{personaBean.persona.idTipoDocumento}">
+                                    <f:selectItem noSelectionOption="true" itemLabel="Seleccione" itemValue="#{null}"/>
+                                    <f:selectItems value="#{tipoDocumentoBean.listaTipoDocumentos}" var="tipDoc" itemLabel="#{tipDoc.descripcionDocumento}" itemValue="#{tipDoc.idTipoDocumento}"/>
+                                </p:selectOneMenu>
+                            <p:outputLabel value="Identificación"/>
+                                <p:inputText value="#{personaBean.persona.identificacionPersona}" style="text-align:center"/>
+                            <p:outputLabel value="Nombres"/>
+                                <p:inputText value="#{personaBean.persona.nombresPersona}" style="text-align:center"/>
+                            <p:outputLabel value="Apellidos"/>
+                                <p:inputText value="#{personaBean.persona.apellidosPersona}" style="text-align:center"/>
+                            <p:outputLabel value="Departamento"/>
+                                <p:selectOneMenu value="#{personaBean.persona.idDepartamento}">
+                                    <f:selectItem noSelectionOption="true" itemLabel="Seleccione" itemValue="#{null}"/>
+                                    <f:selectItems value="#{departamentoBean.listaDepartamentos}" var="dep" itemLabel="#{dep.nombreDepartamento}" itemValue="#{dep.idDepartamento}"/>
+                                </p:selectOneMenu>
+                            <p:outputLabel value="Ciudad"/>
+                                <p:selectOneMenu value="#{personaBean.persona.idCiudad}">
+                                    <f:selectItem noSelectionOption="true" itemLabel="Seleccione" itemValue="#{null}"/>
+                                    <f:selectItems value="#{ciudadBean.listaCiudades}" var="ciu" itemLabel="#{ciu.nombreCiudad}" itemValue="#{ciu.idCiudad}"/>
+                                </p:selectOneMenu>
+                            <p:outputLabel value="Dirección"/>
+                                <p:inputText value="#{personaBean.persona.direccionPersona}" style="text-align:center"/>
+                            <p:outputLabel value="Teléfono"/>
+                                <p:inputText value="#{personaBean.persona.telefonoPersona}" style="text-align:center"/>
+                            <p:outputLabel value="Email"/>
+                                <p:inputText value="#{personaBean.persona.correoPersona}" style="text-align:center"/>
+                        </p:panelGrid>
+                        <p:commandButton value="Guardar" actionListener="#{personaBean.ingresarPersona()}" oncomplete="PF('dialogNuevoPersona').hide();"/>
+                        <p:commandButton value="Cancelar" onclick="PF('dialogNuevoPersona').hide();"/>
                     </p:dialog>
                 </h:form>
             </ui:define>
