csrsto & Hehch Módulos Devoluciones cliente & proveedor

--- a/web/template/HomeTemplate.xhtml
+++ b/web/template/HomeTemplate.xhtml
@@ -71,7 +71,8 @@
                 </p:submenu>
 
                 <p:submenu label="Devoluciones" icon="ui-icon-gear">
-                    <p:menuitem value="DevoluciónCliente" outcome="/views/DevolucionCliente/DevolucionCliente" icon="ui-icon-refresh" />
+                    <p:menuitem value="DevoluciónCliente" outcome="/views/Devoluciones/DevolucionCliente" icon="ui-icon-refresh" />
+                    <p:menuitem value="DevoluciónProveedor" outcome="/views/Devoluciones/DevolucionProveedor" icon="ui-icon-refresh" />
                 </p:submenu>
 
                 <p:submenu label="Servicios" icon="ui-icon-gear">
